# JustUpdate

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  Mac Notes  Pipfile  README.md  bugs need fixing.txt  index.html  license  pyproject.toml  requirements.txt  setup.cfg  setup.py  sitemap.xml
.github/workflows/: testing.yaml
JustFuckingUpdate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
JustUpdate.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
demo/: win.spec
demo/ju-repo/: config.ju  credentials.ju
demo/ju-repo/archive/: metadata.ju  test.py
demo/ju-repo/templates/win/: template.nsi
demo/ju-repo/work/win/: Analysis-00.toc  COLLECT-00.toc  EXE-00.toc  PKG-00.pkg  PKG-00.toc  PYZ-00.pyz  PYZ-00.toc  warn-win.txt  win.exe.manifest  xref-win.html
docs/: mkdocs.yml
docs/docs/: index.md  usage-cli.md  usage-client.md  utilities.md
docs/site/: 404.html  index.html
docs/site/search/: search_index.json
docs/site/usage-cli/: index.html
docs/site/usage-client/: index.html
justfuckingupdate/cli/: __init__.py  commands.py  helper.py
justfuckingupdate/core/: base.py  config.py  executor.py
justupdate/: _version.py
justupdate/cli/: __init__.py  commands.py  helper.py
justupdate/client/: client.py  exceptions.py
justupdate/core/: base.py  data_manager.py  executor.py
justupdate/repo/: builder.py  committer.py  metadata.py  template.py  uploader.py  version.py
justupdate/templates/: README.md  template.nsi
justupdate/templates/MAC/: template.plist
justupdate/templates/MAC/scripts/: postinstall.sh  preinstall.sh
justupdate/templates/win/: template.nsi
search/: search_index.json
tests/: test_base.py  test_client.py  test_metadata.py  test_versions.py
usage-cli/: index.html
usage-client/: index.html
utilities/: index.html
