[tool.poetry]
name = "justupdate"
version = "1.3.10"
description = ""
authors = ["JessicaTegner <jessica.tegner@outlook.com>"]
license = "mit"
keywords = ["PyUpdater", "Pyinstaller", "Auto", "Update", "AutoUpdate", "Auto-Update", "Esky", "simple", "updater", "mac/updater", "windows/updater", "updater4pyi", "bbfreeze", "ccfreeze", "freeze", "cz_freeze", "pyupdate"]
classifiers = ["Development Status :: 4 - Beta", "Environment :: Console", "Intended Audience :: Developers", "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)", "Topic :: Software Development :: Build Tools", "Operating System :: OS Independent", "Programming Language :: Python :: 2.7", "Programming Language :: Python :: 3.4", "Programming Language :: Python :: 3.5", "Programming Language :: Python :: 3.6", "Programming Language :: Python :: 3.7"]
homepage = "https://github.com/JessicaTegner/JustUpdate"
repository = "https://github.com/JessicaTegner/JustUpdate"
readme = "README.md"
packages = [
    { include = "justupdate" },
]
include = ["readme.md", "docs/docs/*"]

[tool.poetry.dependencies]
python = "^3.6"
appdirs = "^1.4"
scp = "^0.13"
paramiko = "^2.7"
requests = "^2"
requests-cache = "^0.5"
pyinstaller = "^4.1"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
importlib-metadata = {version = "^1.6.0", python = "<3.8"}
pre-commit = { version = "^2.8", python = "^3.6.1" }

[tool.poetry.scripts]
justupdate = 'justupdate.cli:main'

[tool.poetry.urls]
"Bug Tracker" = "https://github.com/JessicaTegner/JustUpdate/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
